# IEP

./: README
Laborator10/: main.c  myapp
Laborator11/: main.cpp  myapp
Laborator4/: Source.cpp  hello
Laborator5/: Source.cpp  main
Laborator6/: main.cpp
Laborator7/: main.cpp
Laborator8/KernelHello/: Kbuild  dmesg1.sh  dmesg2.sh  modul.c  modul.ko  modul.mod  modul.mod.c  modules.order
Laborator8/KernelOOPS/: Kbuild  generateOops.sh  modules.order  oops.c  oops.ko  oops.mod  oops.mod.c
Laborator8/Program/: Kbuild  Makefile  modules.order  my_exit.sh  my_init.sh  myapp.c  myapp.ko  myapp.mod  myapp.mod.c  readme
Laborator9/: modules.order  myapp.c  myapp.ko  myapp.mod  myapp.mod.c
StaticLib/: CMakeLists.txt
StaticLib/inc/: header.h
StaticLib/src/: function.cpp  main.cpp
