cmake_minimum_required(VERSION 3.5.1)
project(project)
include_directories(inc)
set(VAR1 src/main.cpp)
set(VAR2 src/function.cpp)
#file(GLOB VAR "src/*.cpp")
add_executable(myapp ${VAR1})
add_library(function-staticlib STATIC ${VAR2})
target_link_libraries(myapp PUBLIC function-staticlib)
target_include_directories(myapp PUBLIC function-staticlib)
